--- a/src/styles/popup/view/selectDevice.less
+++ b/src/styles/popup/view/selectDevice.less
@@ -8,7 +8,7 @@
 
         .select-device-list {
             margin: 17px 0 15px;
-            overflow-y: scroll;
+            overflow-y: auto;
 
             border-top: 1px solid @color_divider;
             border-bottom: 1px solid @color_divider;
